2019-08-19  Andrew Sutton  <asutton@lock3software.com>

	Update diagnostics for function concept misuse.
	* g++.dg/concepts/var-concept3.C: Update diagnostics.

2019-07-30  Andrew Sutton  <asutton@lock3software.com>

	Add a new test for mismatched declarations.
	* g++.dg/cpp2a/concepts-class.C: New test for nested templates.

2019-07-30  Andrew Sutton  <asutton@lock3software.com>

	Update diagnostic messages for improved error checking.
	* g++.dg/cpp2a/concepts-requires1.C: Update diagnostics.
	* g++.dg/concepts/pr84330.C: Change the build mode to 17 only since
	the type error is not detected during normal expression parsing.

2019-07-29  Andrew Sutton  <asutton@lock3software.com>

	Add tests for constrained placeholders.
	* g++.dg/cpp2a/concepts-p1141.C: New tests.

2019-07-15  Andrew Sutton  <asutton@lock3software.com>

	Disallow decltype(auto) parameters.
	* g++.dg/cpp2a/concepts-decltype.C: New tests.

2019-07-15  Richard Biener  <rguenther@suse.de>

	PR middle-end/91162
	* gcc.dg/autopar/pr91162.c: New testcase.

2019-07-15  Kewen Lin  <linkw@gcc.gnu.org>

	PR tree-optimization/88497
	* gcc.dg/tree-ssa/pr88497-1.c: New test.
	* gcc.dg/tree-ssa/pr88497-2.c: Likewise.
	* gcc.dg/tree-ssa/pr88497-3.c: Likewise.
	* gcc.dg/tree-ssa/pr88497-4.c: Likewise.
	* gcc.dg/tree-ssa/pr88497-5.c: Likewise.
	* gcc.dg/tree-ssa/pr88497-6.c: Likewise.
	* gcc.dg/tree-ssa/pr88497-7.c: Likewise.

2019-07-14  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/87233
	* gfortran.dg/initialization_14.f90: Modify to now pass by
	removing two dg-error commands. Added comments.
	* gfortran.dg/initialization_30.f90: New test that includes the
	two tests removed above with the 'dg-options -std=f95'.

2019-07-14  Uroš Bizjak  <ubizjak@gmail.com>

	* gcc.dg/tree-ssa/pr84512.c (dg-final): Remove XFAIL on alpha*-*-*.

2019-07-14  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/91148
	* gcc.target/powerpc/bfp/scalar-extract-exp-2.c: Adjust.